[gd_scene load_steps=3 format=3 uid="uid://cs7781kow5hut"]

[ext_resource type="FontFile" uid="uid://cuoyugv8lk2fj" path="res://art/LEMONMILK-Medium.otf" id="1_7s8xj"]
[ext_resource type="Script" path="res://levels/end_level.gd" id="1_8c62h"]

[node name="end_level" type="Node2D"]
z_index = -5
position = Vector2(220, 0)
script = ExtResource("1_8c62h")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="ScoreLabel" type="RichTextLabel" parent="Control/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = -0.125
anchor_right = 0.0390625
offset_left = 271.0
offset_top = 87.0
offset_right = 545.0
offset_bottom = 145.0
scale = Vector2(2, 2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("1_7s8xj")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "Final Score: 0"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="ComboLabel" type="RichTextLabel" parent="Control/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = -0.15625
anchor_right = 0.0520833
offset_left = 261.0
offset_top = 223.0
offset_right = 535.0
offset_bottom = 281.0
scale = Vector2(2, 2)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("1_7s8xj")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "MAX COMBO: 0x "
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="SubstatsLabel" type="RichTextLabel" parent="Control/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = -0.15625
anchor_right = 0.0520833
anchor_bottom = 0.283951
offset_left = 500.0
offset_top = 367.0
offset_right = 774.0
offset_bottom = 425.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("1_7s8xj")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "perfect: 0
Great: 0
Good: 0
OK: 0
Miss: 0"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 0
offset_left = 118.0
offset_top = 370.0
offset_right = 251.0
offset_bottom = 477.0

[node name="Label" type="Label" parent="Control"]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 166.0
offset_top = 409.0
offset_right = 208.0
offset_bottom = 432.0
text = "Retry
"

[node name="ColorRect2" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0305344
anchor_top = 0.0462963
anchor_right = 0.0305344
anchor_bottom = 0.0462963
offset_left = 349.779
offset_top = 369.148
offset_right = 482.779
offset_bottom = 476.148
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Control"]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 383.0
offset_top = 412.0
offset_right = 454.0
offset_bottom = 435.0
text = "Continue"

[node name="Retry" type="TextureButton" parent="Control"]
visible = false
layout_mode = 0
offset_left = 118.0
offset_top = 370.0
offset_right = 249.0
offset_bottom = 478.0

[node name="Continue" type="TextureButton" parent="Control"]
visible = false
layout_mode = 0
offset_left = 349.0
offset_top = 369.0
offset_right = 480.0
offset_bottom = 477.0

[connection signal="pressed" from="Control/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Control/Continue" to="." method="_on_continue_pressed"]
